--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ bin-debug/
 bin-release/
 [Oo]bj/
 [Bb]in/
-
+[Ss]enhas
 # Other files and folders
 .settings/
 
@@ -12,6 +12,7 @@ bin-release/
 *.air
 *.ipa
 *.apk
+*.senhas
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
